# arcterm

./: .gitignore  AUDIT-main.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.strace  README.md  ROADMAP.md  dist-workspace.toml
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  gen_centos9.yml  gen_centos9_continuous.yml  gen_centos9_tag.yml  gen_debian11.yml  gen_debian11_continuous.yml  gen_debian11_tag.yml  gen_debian12.yml  gen_debian12_continuous.yml  gen_debian12_tag.yml  gen_fedora39.yml  gen_fedora39_continuous.yml  gen_fedora39_tag.yml  gen_fedora40.yml  gen_fedora40_continuous.yml  gen_fedora40_tag.yml  gen_fedora41.yml  gen_fedora41_continuous.yml  gen_fedora41_tag.yml  gen_macos.yml  gen_macos_continuous.yml  gen_macos_tag.yml  gen_ubuntu20.04.yml  gen_ubuntu20.04_continuous.yml  gen_ubuntu20.04_tag.yml  gen_ubuntu22.04.yml  gen_ubuntu22.04_continuous.yml  gen_ubuntu22.04_tag.yml  gen_ubuntu24.04.yml  gen_ubuntu24.04_continuous.yml  gen_ubuntu24.04_tag.yml  gen_windows.yml  gen_windows_continuous.yml  gen_windows_tag.yml  pages.yml
.shipyard/: AUDIT-SHIP.md  HISTORY.md  ISSUES.md  LESSONS.md  MILESTONE-REPORT.md  PROJECT.md  ROADMAP.md  STATE.json  config.json
.shipyard/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.shipyard/designs/: 2026-03-16-engine-migration-design.md  2026-03-17-event-handling-design.md
.shipyard/phases/1/: CONTEXT-1.md  CRITIQUE.md  RESEARCH.md  VERIFICATION.md
.shipyard/phases/10/: CONTEXT-10.md  CRITIQUE.md  RESEARCH.md  VERIFICATION.md
.shipyard/phases/11/: CONTEXT-11.md  CRITIQUE.md  RESEARCH.md  VERIFICATION.md
.shipyard/phases/12/: CONTEXT-12.md  CRITIQUE.md  RESEARCH.md  VERIFICATION-BUILD.md  VERIFICATION.md
.shipyard/phases/13/: CONTEXT-13.md  CRITIQUE.md  RESEARCH-frame-pacing.md  RESEARCH.md
.shipyard/phases/14/: CONTEXT-14.md  CRITIQUE.md
.shipyard/research/: AI_INTEGRATION.md  INLINE_AI_SUGGESTION.md  OSC_7770_STRUCTURED_OUTPUT.md  WARP_STYLE_AI_UX.md  WASM_PLUGIN_SYSTEM.md
.specify/memory/: constitution.md
arcterm-ai/: Cargo.toml
arcterm-ai/src/: agent.rs  config.rs  context.rs  destructive.rs  lib.rs  prompts.rs  suggestions.rs
arcterm-ai/src/backend/: claude.rs  mod.rs  ollama.rs
arcterm-ai/tests/: backend_tests.rs
arcterm-app/: Cargo.toml  build.rs
arcterm-app/src/: ai_detect.rs  ai_pane.rs  colors.rs  command_overlay.rs  config.rs  context.rs  detect.rs  input.rs  keymap.rs  kitty_types.rs  layout.rs  lib.rs  main.rs  menu.rs  neovim.rs  ollama.rs  osc7770.rs  overlay.rs  palette.rs  plan.rs  prefilter.rs  proc.rs  search.rs  selection.rs  tab.rs  terminal.rs  workspace.rs
arcterm-app/tests/: engine_migration.rs
arcterm-core/: Cargo.toml
arcterm-core/src/: cell.rs  grid.rs  input.rs  lib.rs
arcterm-plugin/: Cargo.toml
arcterm-plugin/src/: host.rs  lib.rs  manager.rs  manifest.rs  runtime.rs  types.rs
arcterm-plugin/tests/: runtime_test.rs
arcterm-plugin/wit/: arcterm.wit
arcterm-pty/: Cargo.toml
arcterm-pty/src/: lib.rs  session.rs
arcterm-render/: Cargo.toml
arcterm-render/examples/: window.rs
arcterm-render/src/: gpu.rs  image_quad.rs  lib.rs  palette.rs  quad.rs  renderer.rs  snapshot.rs  structured.rs  text.rs
arcterm-structured-output/: Cargo.toml
arcterm-structured-output/src/: code.rs  diff.rs  image.rs  json_tree.rs  lib.rs  payload.rs
arcterm-vt/: Cargo.toml
arcterm-vt/src/: handler.rs  kitty.rs  lib.rs  processor.rs
arcterm-wasm-plugin/: Cargo.toml
arcterm-wasm-plugin/src/: capability.rs  config.rs  event_router.rs  host_api.rs  lib.rs  lifecycle.rs  loader.rs
arcterm-wasm-plugin/tests/: integration_tests.rs
arcterm-wasm-plugin/tests/fixtures/: README.md
arcterm-wasm-plugin/wit/: plugin-host-api.wit
assets/: arcterm.appdata.xml  arcterm.desktop
assets/flatpak/: com.lgbarn.arcterm.appdata.template.xml  com.lgbarn.arcterm.json  com.lgbarn.arcterm.template.json
assets/icon/: icon-alternatives.html
ci/: check-rust-version.sh  create-release.sh  deploy.sh  generate-workflows.py  verify-rebrand.sh  windows-installer.iss
config/src/: config.rs  keyassignment.rs  ssh.rs
docs/: getting-started.md  local-llm-setup.md  osc-7770-protocol.md
docs/history/: planning-conversation.jsonl
docs/plans/: 2026-03-16-menu-bar-design.md  2026-03-16-menu-bar-plan.md  2026-03-17-local-llm-implementation.md  2026-03-17-local-llm-integration-design.md  2026-03-18-wezterm-fork-plan.md  2026-03-19-ai-hardening-design.md
examples/: arcterm-structured-output.sh
examples/config/: base.toml  overlay-colors.toml  overlay-font.toml
examples/plugins/hello-world/: Cargo.toml  README.md  plugin.toml
examples/plugins/hello-world/src/: lib.rs
examples/plugins/system-monitor/: Cargo.toml  README.md  plugin.toml
examples/plugins/system-monitor/src/: lib.rs
lua-api-crates/plugin/: Cargo.toml
mux/src/: domain.rs  localpane.rs  ssh.rs  termwiztermtab.rs  tmux_commands.rs
scripts/: install-macos-app.sh
specs/001-rebrand-completion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-wasm-plugin-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-structured-output-osc7770/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-ai-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-inline-ai-suggestions/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-warp-style-ai-ux/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
strip-ansi-escapes/src/: main.rs
term/: Cargo.toml
term/src/: terminal.rs
wezterm-client/src/: discovery.rs
wezterm-escape-parser/src/: osc.rs
wezterm-font/src/: lib.rs
wezterm-gui/: Cargo.toml  build.rs
wezterm-gui-subcommands/src/: lib.rs
wezterm-gui/src/: ai_pane.rs  commands.rs  frontend.rs  main.rs  suggestion_overlay.rs  update.rs
wezterm-mux-server-impl/src/: lib.rs
wezterm-toast-notification/src/: macos.rs
(+225 files in other folders)
