[workspace]
members = [
    "arcterm-core",
    "arcterm-vt",
    "arcterm-pty",
    "arcterm-render",
    "arcterm-app",
    "arcterm-plugin",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
description = "GPU-rendered AI terminal emulator"
repository = "https://github.com/lgbarn/arcterm"
homepage = "https://github.com/lgbarn/arcterm"

[workspace.dependencies]
alacritty_terminal = "0.25"
vte = "0.15"
portable-pty = "0.9"
wgpu = "28"
winit = "0.30"
glyphon = "0.10"
tokio = { version = "1", features = ["full"] }
pollster = "0.4"
log = "0.4"
env_logger = "0.11"

rmpv = "1"

syntect = "5"
pulldown-cmark = "0.12"
image = "0.25"
regex = "1"
base64 = "0.22"
serde_json = "1"
wasmtime = { version = "42", features = ["component-model", "cranelift"] }
wasmtime-wasi = "42"
anyhow = "1"

arcterm-core = { path = "arcterm-core" }
arcterm-vt = { path = "arcterm-vt" }
arcterm-pty = { path = "arcterm-pty" }
arcterm-render = { path = "arcterm-render" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
