[package]
name = "arcterm-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "arcterm-app"
path = "src/main.rs"

[dependencies]
arcterm-core = { path = "../arcterm-core" }
arcterm-vt = { path = "../arcterm-vt" }
arcterm-pty = { path = "../arcterm-pty" }
arcterm-render = { path = "../arcterm-render" }
tokio.workspace = true
winit.workspace = true
log.workspace = true
env_logger.workspace = true
