[package]
name = "arcterm-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "arcterm-app"
path = "src/main.rs"

[features]
## Enables fine-grained timestamp logging for latency measurement.
latency-trace = []

[dependencies]
alacritty_terminal.workspace = true
arcterm-core = { path = "../arcterm-core" }
arcterm-vt = { path = "../arcterm-vt" }
arcterm-pty = { path = "../arcterm-pty" }
arcterm-render = { path = "../arcterm-render" }
image.workspace = true
tokio.workspace = true
winit.workspace = true
log.workspace = true
env_logger.workspace = true
arboard = "3"
toml = "1"
serde = { version = "1", features = ["derive"] }
dirs = "6"
notify = "8"
rmpv.workspace = true
libc = "0.2"
regex.workspace = true
serde_json.workspace = true
base64.workspace = true
clap = { version = "4", features = ["derive"] }
arcterm-plugin = { path = "../arcterm-plugin" }
similar = "2"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"

[dev-dependencies]
tempfile = "3"
