[package]
name = "arcterm-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
toml = "1"
anyhow = "1"

[dev-dependencies]
wasm-encoder = "0.229"
wat = "1"
