[package]
name = "arcterm-render"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wgpu.workspace = true
winit.workspace = true
glyphon.workspace = true
pollster.workspace = true
log.workspace = true
env_logger.workspace = true
arcterm-core = { path = "../arcterm-core" }
