[package]
name = "arcterm-render"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
gpu-tests = []

[dependencies]
wgpu.workspace = true
winit.workspace = true
glyphon.workspace = true
pollster.workspace = true
log.workspace = true
env_logger.workspace = true
arcterm-core = { path = "../arcterm-core" }
bytemuck = { version = "1", features = ["derive"] }
