[package]
name = "arcterm-render"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
gpu-tests = []

[dependencies]
wgpu.workspace = true
winit.workspace = true
glyphon.workspace = true
pollster.workspace = true
log.workspace = true
env_logger.workspace = true
alacritty_terminal.workspace = true
vte.workspace = true
bytemuck = { version = "1", features = ["derive"] }
syntect.workspace = true
pulldown-cmark.workspace = true
image.workspace = true
serde_json.workspace = true
