[package]
name = "arcterm-structured-output"
version = "0.1.0"
edition = "2021"
description = "OSC 7770 structured output rendering for ArcTerm"

[dependencies]
anyhow = { workspace = true }
base64 = "0.22"
lazy_static = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
syntect = { version = "5.2", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "regex-fancy"] }
termwiz = { path = "../termwiz" }
